--- a/src/app/pages/tables/tables.component.html
+++ b/src/app/pages/tables/tables.component.html
@@ -8,50 +8,10 @@
             <div class="card-body">
               <div class="row">
                 <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">Traffic</h5>
-                  <span class="h2 font-weight-bold mb-0">350,897</span>
-                </div>
-                <div class="col-auto">
-                  <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
-                    <i class="fas fa-chart-bar"></i>
-                  </div>
-                </div>
-              </div>
-              <p class="mt-3 mb-0 text-muted text-sm">
-                <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
-                <span class="text-nowrap">Since last month</span>
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-xl-3 col-lg-6">
-          <div class="card card-stats mb-4 mb-xl-0">
-            <div class="card-body">
-              <div class="row">
-                <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">New users</h5>
-                  <span class="h2 font-weight-bold mb-0">2,356</span>
-                </div>
-                <div class="col-auto">
-                  <div class="icon icon-shape bg-warning text-white rounded-circle shadow">
-                    <i class="fas fa-chart-pie"></i>
-                  </div>
-                </div>
-              </div>
-              <p class="mt-3 mb-0 text-muted text-sm">
-                <span class="text-danger mr-2"><i class="fas fa-arrow-down"></i> 3.48%</span>
-                <span class="text-nowrap">Since last week</span>
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-xl-3 col-lg-6">
-          <div class="card card-stats mb-4 mb-xl-0">
-            <div class="card-body">
-              <div class="row">
-                <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">Sales</h5>
-                  <span class="h2 font-weight-bold mb-0">924</span>
+                 
+                    <h5 class="card-title text-uppercase text-muted mb-0"><td>Nom Etudiant</td></h5>
+                    <h5 class="card-title text-uppercase text-muted mb-0"><td>Prenom Etudiant</td></h5>
+                    <h4 class="card-title text-uppercase text-muted mb-0"><td>Numero Etudiant</td></h4>
                 </div>
                 <div class="col-auto">
                   <div class="icon icon-shape bg-yellow text-white rounded-circle shadow">
@@ -59,31 +19,10 @@
                   </div>
                 </div>
               </div>
-              <p class="mt-3 mb-0 text-muted text-sm">
+              <!--<p class="mt-3 mb-0 text-muted text-sm">
                 <span class="text-warning mr-2"><i class="fas fa-arrow-down"></i> 1.10%</span>
                 <span class="text-nowrap">Since yesterday</span>
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-xl-3 col-lg-6">
-          <div class="card card-stats mb-4 mb-xl-0">
-            <div class="card-body">
-              <div class="row">
-                <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">Performance</h5>
-                  <span class="h2 font-weight-bold mb-0">49,65%</span>
-                </div>
-                <div class="col-auto">
-                  <div class="icon icon-shape bg-info text-white rounded-circle shadow">
-                    <i class="fas fa-percent"></i>
-                  </div>
-                </div>
-              </div>
-              <p class="mt-3 mb-0 text-muted text-sm">
-                <span class="text-success mr-2"><i class="fas fa-arrow-up"></i> 12%</span>
-                <span class="text-nowrap">Since last month</span>
-              </p>
+              </p>-->
             </div>
           </div>
         </div>
@@ -94,6 +33,7 @@
 <!-- Page content -->
 <div class="container-fluid mt--7">
   <!-- Table -->
+  
   <div class="row">
     <div class="col">
       <div class="card shadow">
@@ -107,7 +47,8 @@
                 <th scope="col">Libelle du cours</th>
                 <th scope="col">Duree du cours (en heure)</th>
                 <th scope="col">Image</th>
-                <th scope="col"></th>
+                <th scope="col">Nombre credit</th>
+                <th scope="col">Nom de formation</th>
               </tr>
             </thead>
             <tbody>
@@ -115,7 +56,10 @@
                 <td>{{u.libelleCours}}</td>
                 <td>{{u.dureeCours}}</td>
                 <td>{{u.image}}</td>
-                <tr>
+              <tr>
+             <tr *ngFor="let v of ues">
+                    <td>{{v.creditEcts}}</td>
+              <tr>
                   <div class="card-body">
                     <div class="card-header border-0">
                       <h3 class="mb-0">Questions de cours</h3>
@@ -126,7 +70,7 @@
                                 <input matInput placeholder="categorie" type="text" [(ngModel)]="question.categorie" name="categorie">
                             </div>
                             <div class="col-md-6">
-                              <input matInput placeholder="question" type="text" [(ngModel)]="question.question" name="question">
+                              <textarea matInput placeholder="question" type="textarea" [(ngModel)]="question.question" name="question"></textarea>
                            </div>
                         </div>
                         <button mat-raised-button class="btn btn-danger pull-right">Envoyer</button>
