--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -7,7 +7,7 @@
 <!-- Page content -->
 <div class="container-fluid mt--7">
   <!-- Table enseignant visible par étudiant -->
-  <div class="row  mb-5">
+  <div class="row  mb-5" [hidden]="authorities()">
     <div class="col">
       <div class="card shadow">
         <div class="card-header border-0">
