--- a/src/app/pages/eval-quest/eval-quest.component.html
+++ b/src/app/pages/eval-quest/eval-quest.component.html
@@ -5,7 +5,7 @@
   </div>
 </div>
 <!-- Page content -->
-<div class="container-fluid mt-5">
+<div class="container-fluid mt-5" [hidden]="authorities()">
   <!-- Formulaire Evaluation -->
   <form (ngSubmit)="addEvaluation()">
     <h3>Formulaire évaluation</h3>
