--- a/src/app/pages/icons/icons.component.html
+++ b/src/app/pages/icons/icons.component.html
@@ -9,7 +9,7 @@
 </div>
 <!--TOUT CECI EST UN PLACEHOLDER-->
 <!-- Page content -->
-<div class="container-fluid mt--7">
+<div class="container-fluid mt--7" [hidden]="authorities()">
   <!-- Table -->
   <div class="row">
     <div class="col">
