modif edit personne

--- a/src/app/edit-user/edit-user.component.html
+++ b/src/app/edit-user/edit-user.component.html
@@ -1,4 +1,10 @@
-<p>edit-user works!</p>
+<div class="header bg-gradient-danger pb-8 pt-5 pt-md-8">
+  <div class="container-fluid">
+    <div class="header-body">
+    </div>
+  </div>
+</div>
+<!-- Page content -->
 <div>
     <h1>Mise à jour d'un utilisateur</h1>
     <form [formGroup]="editForm">
