--- a/src/app/pages/user-profile/user-profile.component.html
+++ b/src/app/pages/user-profile/user-profile.component.html
@@ -164,8 +164,9 @@
         <th scope="col">Numero de téléphone</th>
         <th scope="col">Identifiant</th>
         <th scope="col">Mot de passe</th>
-        <th scope="col">Roles</th>
-        <th scope="col">Action</th>
+        <!--<th scope="col">Roles</th>-->
+        <th scope="col">Editer</th>
+        <th scope="col">Supprimer</th>
 
       </tr>
     </thead>
@@ -182,6 +183,7 @@
           <td>{{personnes[i].username}}</td>
           <td>{{personnes[i].password}}</td>
          <!-- <td>{{roles[i].libelleRole}}</td> -->
+            <td><button (click)="editUser(p)">Modifier</button></td>
           <td><button class="btn btn-danger pull-right" (click)="delete(p.id)">Supprimer le compte ?</button></td>
 
       </tr>
