bandeau espace compte

--- a/src/app/pages/user-profile/user-profile.component.html
+++ b/src/app/pages/user-profile/user-profile.component.html
@@ -1,5 +1,10 @@
-<br><br><br>
-
+<div class="header bg-gradient-danger pb-8 pt-5 pt-md-8">
+  <div class="container-fluid">
+    <div class="header-body">
+    </div>
+  </div>
+</div>
+<!-- Page content -->
 <div class="card" style="width: 80%;">
   <div class="card-body">
     <h1 class="card-title">Ajouter un compte</h1>
